# BuyPulse

./: .env.example  .gitignore  CLAUDE.md  ai-shopping-assistant-research.md  alembic.ini  docker-compose.yml  pyproject.toml
.specify/memory/: constitution.md
alembic/: env.py
alembic/versions/: 001_initial_schema.py  002_user_layer.py  003_multi_platform.py  004_admin_backend_p1.py  005_add_admin_locale.py  006_scheduler_jobs.py
deploy/: buypulse-bot.service
docs/: affiliate-isolation-research.md  asin-seed-sources-research.md  chinese-llm-api-research.md  deployment-guide.md  vps-security-hardening.md
evals/: run_eval.py  test_cases_v1.json  test_cases_v2.json
evals/results/: DS-R1-7B_20260317_122902.json  DS-R1-7B_20260317_122916.json  DeepSeek-V3.2_20260317_134326.json  DeepSeek-V3_20260317_122902.json  DeepSeek-V3_20260317_122916.json  DeepSeek-V3_20260317_134326.json  GLM-4-9B_20260317_122902.json  GLM-4-9B_20260317_122916.json  GLM-4-9B_20260317_134326.json  GLM-4.5-Air_20260317_134326.json  GLM-Z1-9B_20260317_122902.json  GLM-Z1-9B_20260317_122916.json  Hunyuan-A13B_20260317_134326.json  Qwen2.5-32B_20260317_122902.json  Qwen2.5-32B_20260317_122916.json  Qwen2.5-32B_20260317_134326.json  Qwen2.5-32B_20260317_134825.json  (+24 more)
scripts/: download_ucsd_metadata.sh
spikes/: adaptive_endurance.py  adaptive_log.txt  adaptive_stats.json  asin_seed_harvester.py  curl_cffi_spike.py  curl_cffi_stress.py  endurance_log.txt  endurance_test.py  overnight_loop.sh  reddit_asin_harvester.py
src/cps/: cli.py  (+3 more)
tests/: conftest.py
web/: package-lock.json  package.json
(+202 files in other folders)
